# GazeOff

./: .gitignore  .vercelignore  Cargo.toml  Iris — Windows Eye-Care & Desk Wellness App Complete Product Canvas for Fable 5.md  README.md  build.rs  dev.ps1  sign_app.ps1  tauri.conf.json  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-windows.yml
capabilities/: default.json
docs/: FEATURE_CATALOG.md  MICROSOFT_STORE_LISTING.md  PUBLISHING_CHECKLIST.md
packaging/msix/: Package.appxmanifest  README.md
scripts/: generate_windows_icon.py
src/: main.rs
store-assets/: render.html
store-assets/microsoft-store-v0.1.3/: README.md  Store listing GazeOff English.csv
store-assets/microsoft-store-v1.0.4/: README.md
ui/: afk_prompt.html  dim.html  nudge.html  overlay.html  panel.html  settings.html  skip_nudge.html  welcome.html
website/: BingSiteAuth.xml  app.js  guides.css  index.html  robots.txt  sitemap.xml  style.css  vercel.json
website/20-20-20-reminder/: index.html
website/downloads/v0.1.3/: GazeOff-windows-x64.exe.sha256
website/downloads/v0.1.4/: GazeOff-windows-x64-setup.exe.sha256  GazeOff-windows-x64.msi.sha256
website/eye-break-reminder-windows/: index.html
website/lookaway-alternative/: index.html
website/privacy/: index.html  privacy.css
